--- a/src/components/Collection/Search.css
+++ b/src/components/Collection/Search.css
@@ -6,35 +6,17 @@
 
 .react-autosuggest__input {
   width: 100%;
-  /* border: none!important; */
-  /* border-bottom: solid $light 1px !important; */
-  /* border-radius: 0px !important; */
 }
 
-.react-autosuggest__input ::placeholder{
-  /* color: #989898 !important; */
+/* .react-autosuggest__input::placeholder{
   weight: 500;
   font-size: 14px;
-}
+} */
 
-.icon-for-autosuggest {
-  position: relative;
-  top: -32px;
-  left: 250px;
-  font-size: 14px;
-  /* color: $light; */
-}
-
-/* $primary => blue */
 .react-autosuggest__input--focused {
+  border: 1px solid #ced4da !important;
   outline: none;
-  /* border-color: blue !important; */
   box-shadow: none !important;
-  /* color: blue !important; */
-
-  /* & + .icon {
-    color: $primary;
-  } */
 }
 
 .react-autosuggest__input--open {
@@ -43,8 +25,7 @@
 }
 
 .react-autosuggest__suggestions-container {
-  z-index: 9999;
-  /* display: none; */
+  display: none;
 }
 
 .react-autosuggest__suggestions-container--open {
@@ -59,8 +40,6 @@
   font-size: 16px;
   border-radius: 0px;
   z-index: 1023;
-  /* box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075); */
-
 }
 
 .react-autosuggest__suggestions-list {
